--- a/flake8.cfg
+++ b/flake8.cfg
@@ -3,5 +3,5 @@
 # F811 is legal in odoo 8 when we implement 2 interfaces for a method
 ignore = E123,E133,E226,E241,E242,F811
 max-line-length = 79
-exclude = __unported__,env,.git,env/odoo,addons-community,__init__.py
+exclude = __unported__,env,.git,env/odoo,addons-community,__init__.py,*/static/build/*
 max-complexity = 10
